Add recipe to Lasagna

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,28 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Lasagna</h1>
+    <img src="recipe-images/lasagna.jpg">
+    <h3>Description</h3>
+    <p>This classic lasagna is the ultimate comfort food. Layers of tender pasta, rich meat sauce, and gooey cheese make this dish a family favorite. It is perfect for Sunday dinner or for freezing to enjoy later.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 pound ground beef</li>
+        <li>1 jar (24 oz) marinara sauce</li>
+        <li>1 box lasagna noodles</li>
+        <li>15 oz ricotta cheese</li>
+        <li>1 large egg</li>
+        <li>1 lb mozzarella cheese, shredded</li>
+        <li>1/2 cup parmesan cheese, grated</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Preheat oven to 375°F (190°C) and lightly grease a 9x13 baking dish.</li>
+        <li>Cook the lasagna noodles in a large pot of boiling water until al dente, then drain.</li>
+        <li>In a large skillet, brown the ground beef over medium heat. Drain fat and stir in the marinara sauce.</li>
+        <li>In a small bowl, mix the ricotta cheese, egg, and parmesan cheese together.</li>
+        <li>Build the layers: Spread a little meat sauce on the bottom of the pan. Top with noodles, then the ricotta mixture, then mozzarella. Repeat layers.</li>
+        <li>Cover with foil and bake for 30 minutes. Remove foil and bake for another 15 minutes until the cheese is bubbly and golden brown.</li>
+        <li>Let the lasagna rest for 10 minutes before slicing.</li>
+    </ol>
 </body>
 </html>
